--- a/src/index.html
+++ b/src/index.html
@@ -2,18 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Asteria</title>
+    <title>Asteria - Crafting Websites as Brilliant as the Stars</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
-
-    <!-- fonts -->
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Familjen+Grotesk:ital,wght@0,400..700;1,400..700&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&display=swap"
-      rel="stylesheet"
-    /> -->
   </head>
   <body>
     <app-root></app-root>
