--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,51 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <!-- meta tags -->
     <title>Asteria - Crafting Websites as Brilliant as the Stars</title>
+    <meta
+      name="title"
+      content="Asteria - Crafting Websites as Brilliant as the Stars"
+    />
+    <meta
+      name="description"
+      content="Asteria is a digital design agency that creates quality, beautiful, and innovative web products."
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://asteria-digital.vercel.app/" />
+    <meta
+      property="og:title"
+      content="Asteria - Crafting Websites as Brilliant as the Stars"
+    />
+    <meta
+      property="og:description"
+      content="Asteria is a digital design agency that creates quality, beautiful, and innovative web products."
+    />
+    <meta
+      property="og:image"
+      content="https://asteria-digital.vercel.app/assets/images/meta.png"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://asteria-digital.vercel.app/"
+    />
+    <meta
+      property="twitter:title"
+      content="Asteria - Crafting Websites as Brilliant as the Stars"
+    />
+    <meta
+      property="twitter:description"
+      content="Asteria is a digital design agency that creates quality, beautiful, and innovative web products."
+    />
+    <meta
+      property="twitter:image"
+      content="https://asteria-digital.vercel.app/assets/images/meta.png"
+    />
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
