--- a/src/index.html
+++ b/src/index.html
@@ -47,6 +47,13 @@
       property="twitter:image"
       content="https://asteria-digital.vercel.app/assets/images/meta.png"
     />
+
+    <!-- google analytics -->
+    <meta
+      name="google-site-verification"
+      content="F_ZVhD7cVA_s5YdPK4f6427vE_-VOA_23vI84uJnKp4"
+    />
+
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
