add google analytics tag to index.html

--- a/src/index.html
+++ b/src/index.html
@@ -48,11 +48,27 @@
       content="https://asteria-digital.vercel.app/assets/images/meta.png"
     />
 
-    <!-- google analytics -->
+    <!-- google search console -->
     <meta
       name="google-site-verification"
       content="F_ZVhD7cVA_s5YdPK4f6427vE_-VOA_23vI84uJnKp4"
     />
+
+    <!-- google analytics -->
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-K2J1TX2G17"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-K2J1TX2G17");
+    </script>
 
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
