change vercel domain to the new asteria.digital domain

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://asteria-digital.vercel.app/" />
+    <meta property="og:url" content="https://asteria.digital/" />
     <meta
       property="og:title"
       content="Asteria - Crafting Websites as Brilliant as the Stars"
@@ -26,14 +26,14 @@
     />
     <meta
       property="og:image"
-      content="https://asteria-digital.vercel.app/assets/images/meta.png"
+      content="https://asteria.digital/assets/images/meta.png"
     />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta
       property="twitter:url"
-      content="https://asteria-digital.vercel.app/"
+      content="https://asteria.digital/"
     />
     <meta
       property="twitter:title"
@@ -45,7 +45,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://asteria-digital.vercel.app/assets/images/meta.png"
+      content="https://asteria.digital/assets/images/meta.png"
     />
 
     <!-- google search console -->
