Add keywords meta tag

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,10 @@
       name="description"
       content="Asteria is a digital design agency that creates quality, beautiful, and innovative web products."
     />
+    <meta
+      name="keywords"
+      content="web design, digital agency, innovative web products, quality design, beautiful websites"
+    />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
@@ -31,10 +35,7 @@
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta
-      property="twitter:url"
-      content="https://asteria.digital/"
-    />
+    <meta property="twitter:url" content="https://asteria.digital/" />
     <meta
       property="twitter:title"
       content="Asteria - Crafting Websites as Brilliant as the Stars"
